2013-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_vsnprintf_real): Unify int and wchar
	handling.

2013-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_abort): Make static

2013-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_vsnprintf_real): Don't attempt to
	transform invalid unicode codepoints.

2013-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_vsnprintf_real): Remove needless explicit
	\0 checking.

2013-10-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/legacy_parse.c: Add support for "nd" disk.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Consolidate cpuid code.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Move cpuid code to cpuid.h and TSC code to tsc.c.

2013-10-26  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub.d/00_header.in: Don't use LANG if it's not set.

2013-10-26  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* util/grub-mkconfig.in: Replace $0 with $self.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.

2013-10-26  BVK Chaitanya  <bvk.groups@gmail.com>

	* docs/osdetect.cfg: New file.

2013-10-26  BVK Chaitanya  <bvk.groups@gmail.com>

	* tests/util/grub-shell.in: Add new --debug option.

2013-10-26  BVK Chaitanya  <bvk.groups@gmail.com>

	* tests/test_unset.in: New test.

2013-10-26  BVK Chaitanya  <bvk.groups@gmail.com>

	* tests/test_sha512sum.in: New test.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c: Replace strncat with memcpy.
	* include/grub/misc.h: Remove strncat.
	* grub-core/lib/posix_wrap/string.h: Likewise.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/date_unit_test.c: New test.

2013-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/datetime.c (grub_unixtime2datetime): Fix mishandling
	of first three years after start of validity of unixtime.
